# cppfig

./: .clang-format  .clang-tidy  .gitmodules  CMakeConfig.h.in  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  docs.yml
benchmark/: CMakeLists.txt  README.md  benchmark_main.cpp
cmake/: CompileCommands.cmake  Coverage.cmake  Docs.cmake
docs/: custom-types.md  defining-settings.md  getting-started.md  serializers.md  testing.md  validators.md
examples/: CMakeLists.txt  ExampleConfiguration.h  basic_example.cpp  custom_types_example.cpp  example.cpp  schema_migration_example.cpp  simple_config_example.cpp
src/: CMakeLists.txt  CommonConfigurations.h  ConfigHelpers.h  Configuration.cpp  Configuration.h  ConfigurationDefault.h  ConfigurationName.h  ConfigurationTraits.h  GenericConfiguration.h  IConfiguration.h  IConfigurationSerializer.h  JsonSerializer.h  Setting.h  TypedSetting.h  cppfig.h
src/cppfig/: conf.h  configuration.h  cppfig.h  diff.h  interface.h  json.h  logging.h  schema.h  serializer.h  setting.h  status.h  thread_policy.h  traits.h  validator.h  value.h
src/cppfig/testing/: mock.h
test/: CMakeLists.txt  compile_time_safety_examples.cpp  integration_test.cpp  thread_safety_test.cpp  unit_test.cpp
